--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <h2>⚡ Choose Your Portal</h2>
 
     <div class="button-grid">
-      <button class="neon-btn" onclick="window.open('https://kgs-web.onrender.com','_blank')">KGS UPDATED</button>
+      <button class="neon-btn" onclick="window.open('https://spidykgs.vercel.app/','_blank')">KGS UPDATED</button>
     </div>
   </div>
 
