--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <h2>⚡ Choose Your Portal</h2>
 
     <div class="button-grid">
-      <button class="neon-btn" onclick="window.open('https://kgs-weby.onrender.com/batches','_blank')">KGS PIN</button>
+      <button class="neon-btn" onclick="window.open('https://kgs-dusky.vercel.app/home','_blank')">KGS PIN</button>
       <button class="neon-btn" onclick="window.open('https://spidykgs.vercel.app/','_blank')">KGS NO PIN</button>
     </div>
   </div>
